k8s/oauth2-proxy/overlay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-proxy2-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    jali-clarke.external-dns.alpha.kubernetes.io/is-external: "true"
spec:
  ingressClassName: external
  tls:
  - hosts:
    - auth.jali-clarke.ca
    secretName: jali-clarke-ca
  rules:
  - host: auth.jali-clarke.ca
    http:
      paths:
      - pathType: Prefix
        path: "/oauth2"
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
